[package]
name = "whitespacej"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5", features = [
    "derive",
    "help",
    "std",
], default-features = false }
num-traits = "0.2"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
